@@ -8,6 +8,8 @@ Known bugs     - all fixed now
 version 0.6.12 - available as snapshot
   - CHG: 'not enough case/control' in caseControlSample now generates 
          a warning message, rather than exception.
+  - CHG: set the default sample saveAs format to 'auto', instead of 'bin'
+         'bin' was used before 'auto' was introduced
 
 version 0.6.11 - (Rev 119) - Jan 19, 2006
   - DOC: add examples of penetrance operators to the reference manual.
